exceltoppt/frontend/src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}
.frame-2 {
  align-items: center;
  display: flex;
  height: 50px;
  justify-content: space-between;
  padding: 17px 8px;
  position: relative;
  width: 100%;
  background-color: black;
}

.frame-3 {
  align-items: center;
  display: flex;
  gap: 12px;
  margin-bottom: -7px;
  margin-top: -7px;
  position: relative;
  width: fit-content;
}

.line-1 {
  height: 30px;
}

.xlsxicon {
  height: 10px;
}

.mainmenu-button-list {
  list-style: none;
  display: flex;
  gap: 10px; /* Adjust the gap as needed */
}

.mainmenu-button-list li {
  margin: 0;
  padding: 0;
}

.mainmenu-button-list button {
  background-color: black; 
  color: #fff; 
  border: none;
  border-radius: 4px;
  padding: 10px 15px;
  cursor: pointer;
  font-size: 14px;
  height: 40px;
}

.mainmenu-button-list button:hover {
  background-color: #f46f22; 
}

.mainmenu-button-list button.selected {
  background-color: #f46f22; 
  color: #fff; 
}

.app-container {
  width: 100%;
  height: 100vh;
  background-color: #fff0e6;
}

.upload-container-main {
  border: 1px solid lightgrey;
  height: 85vh;
  background-color: white;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  margin: 30px 30px 30px 30px;
}

.manifest-header {
  height: 50px;
  background-color: #92e771; /* Parrot Green */
  color: black;
  font-weight: bold;
  padding-left: 20px;
  padding-top: 10px;
  width: calc(100% - 60px);
  margin-left: 30px;
}
.manifest-header2 {
  height: 50px;
  background-color: lightgrey; /* Parrot Green */
  color: #f46f22;
  font-weight: bold;
  padding-left: 20px;
  padding-top: 10px;
  margin-top: 30px;
  width: 100%;
}
.progress-bar-container {
  width: calc(100% - 700px); /* 100% width minus 30px on each side */
  height: 50px;
  margin: 25px auto 30px auto; /* top, right, bottom, left */
  
}
.smallText {
  font-size: 12px;
  margin-top: 5px;
}
.upload-cloud-icon {
  color: grey;
  width: 40px;
  height: 40px;
}

.upload-container {
  width: calc(100% - 80px); /* 100% width minus 30px on each side */
  height: calc(100% - 180px);
  margin-bottom: 30px;
  border: 1px solid lightgrey;
  border-radius: 2px;
  margin-left: 30px;
}

.upload-header-container {
  width: calc(100% - 40px);
  margin-left: 20px;
  padding: 10px;
  font-size: 16px;
  font-weight: 600;
  height: 20px;
}

.upload-subheader-container {
  width: calc(100% - 40px);
  margin-left: 20px;
  margin-top: 10px;
  padding: 10px;
  font-size: 12px;
  font-weight: 200;
  height: 20px;
  color: #424448;
}

.button-template {
  width: 300px;
  height: 40px;
  border-radius: 8px;
  background-color: #D9F27E;
  color: black;
  padding: 6px, 14px, 6px, 14px;
  margin-top: 40px;
  margin-left: 500px;
  margin-bottom: 30px;
  font-weight: bold;
}

.upload-widget {
  width: calc(100% - 600px);
  height: 200px;
  margin-top: 60px;
  margin-left: 300px;
  background-color: black;
  border-radius: 6px;
}

.upload-widget {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.upload-icon {
  margin-top: 50px; 
}

.upload-text {
  color: #D9F27E;
  font-size: 16px; 
  margin-top: 10px;
  transition: color 0.3s;
}

.upload-text:hover {
  color: #6941C6; 
}

.upload-sub-text {
  color: white;
  font-size: 12px; 
}

.fileNametext {
  color: black;
  font-size: 14px;
  margin-top: 8px; 
  margin-left: 10px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.sheetCounttext {
  color: grey;
  font-size: 14px;
  margin-top: 10px; 
  margin-left: 10px;
}

.breadcrumb-container {
  font-size: 14px;
  color: grey;
  margin-left: 20px;
  margin-top: 10px;
}

.breadcrumb-container a {
  color: black;
  text-decoration: none;
}

.breadcrumb-container a:hover {
  text-decoration: underline;
}

.breadcrumb-container .separator {
  margin: 0 5px; /* Adjust spacing between items */
}

.breadcrumb-container .current-page {
  color: #f46f22;
}

.file-list-container {
  width: calc(100% - 600px);
  height: 80px;
  margin-left: 300px;
  margin-top: 30px;
  background-color: rgb(245, 243, 243);
  border-radius: 6px;
  padding: 1px;
  
}
.info-container {
  display: flex;
  justify-content: space-between;
}
.fileSizetext {
  color: grey;
  font-size: 14px;
  margin-top: 10px;
  margin-right: 10px; /* Added margin-right for right alignment */
}

.icon-container {
  margin-left: 10px; 
}


.uploadContainer2 {
  display: flex;
  width: calc(100% - 600px);
  align-items: right;
  color: white;
  justify-content: flex-end;
  padding-bottom: 10px;
  padding-top: 10px;
  margin-top: 10px;
  margin-left: 300px;
}

.button-container {
  width: calc(100% - 60px); 
  margin-bottom: 10px;
  margin-left: 30px;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}
.button-container2 {
  width: calc(100% - 30px); 
  margin-bottom: 10px;
  margin-left: 30px;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}
.button-container3 {
  width: calc(100% - 60px); 
  margin-bottom: 10px;
  margin-left: 30px;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}



.loadingContainer {
  display: flex;
  flex-direction: column; 
  align-items: center; 
  color: white;
  padding-bottom: 10px;
  padding-top: 10px;
  margin-top: 10px;
  margin-left: 50px; 
}

.loadingContainer2 {
  display: flex;
  flex-direction: column; 
  align-items: center; 
  color: white;
  padding-bottom: 10px;
  padding-top: 10px;
  margin-top: 10px;
  margin-left: 50px; 
  height: 100%
}
.sidebar-divider{
  border-top: 1px solid rgb(229, 226, 226);;
  width: calc(100% - 30px);
  margin-left: 10px;
  margin-top: 10px;
}
.sidebar-divider2{
  border-top: 1px solid rgb(229, 226, 226);;
  width: calc(100% - 600px);
  margin-left:300px;
  margin-top: 10px;
}

.action-button {
  max-width: 80px;
  height: 40px;
  width: 80px;
  border-radius: 4px;
  background-color: #f46f22;
  color: white;
  
}

.action-button-align-right{
  background-color: #f46f22;
  color: white;
  border-radius: 8px;
  cursor: pointer;
  text-align: center;
  max-width: 80px;
  width: 80px;
  height: 34px; 
}

.action-button2 {
  background-color: white;
  color: black;
  border: 1px solid #D0D5DD;
  border-radius: 8px;
  cursor: pointer;
  text-align: center;
  max-width: 80px;
  width: 80px;
  height: 34px; 
  
}
.space-padding{
  margin: 5px 5px 5px 5px;
}
.action-button-align-right2{
  background-color: white;
  color: black;
  border-radius: 3px;
  border:1px solid rgb(229, 226, 226);
  cursor: pointer;
  text-align: center;
  max-width: 100px;
  width: 80%;
  height: 30px;
}


.spinner {
  border: 4px solid rgba(255, 255, 255, 0.3);
  border-top: 4px solid #f46f22; 
  border-radius: 50%;
  width: 40px;
  height: 40px;
  animation: spin 2s linear infinite;
  
}


.spinner2 {
  border: 4px solid rgba(255, 255, 255, 0.3);
  border-top: 4px solid #f46f22; 
  border-radius: 50%;
  margin-top: 250px;
  width: 80px;
  height: 80px;
  animation: spin 2s linear infinite;
  
}
@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}


.manifest-container {
  width: calc(100% - 60px); /* 100% width minus 30px on each side */
  height: calc(100% - 250px);
  margin-bottom: 10px;
  border: 1px solid lightgrey;
  border-radius: 2px;
  margin-left: 30px;
  display: flex;
  flex-direction: row;
}

.manifest-container > div {
  flex: 1;
  padding: 15px;
  border-right: 1px solid lightgrey;
  box-sizing: border-box;
  overflow: hidden;
  overflow: auto;
  font-size: 12px;
}

.manifest-container > div:last-child {
  border-right: none;
  font-size: 18px;
}

.manifest-header-container {
  width: 100%;
  height: 50px;
  text-align: left;
  padding: 10px;
  color: black;
  font-size: 30px;
  margin-bottom: 5px;
}

.manifest-subheader-container {
  width: 100%;
  height: 30px;
  text-align: left;
  padding: 5px;
  color: #3D3D3D;
  font-size: 16px;
  font-style: italic;
  margin-bottom: 10px;
  margin-left: 5px;
}

.sheet-names-container {
  display: flex;
  flex-direction: column;
}

.sheet-name {
  margin-top: 10px;
  cursor: pointer;
  padding: 10px;
  font-size: 16px;
  border: 1px solid #ccc;
  border-radius: 3px;
  transition: background-color 0.2s;
  display: flex;
  align-items: center;
  height: 80px;
}

.circle {
  width: 30px;
  height: 30px;
  background-color: #888; /* Grey color for the circle */
  border-radius: 50%;
  margin-right: 10px;
}

.badge {
  position: relative;
  background-color: #f2eed9;
  padding: 5px;
  border-radius: 15px; /* Adjust as needed for oval shape */
}
.sheet-info {
  display: flex;
  flex-grow: 1;
  justify-content: space-between;
  align-items: center;
}

.sheet-name-text {
  font-weight: bold;
}

.edit-button {
  background-color: black;
  color: white;
  border: none;
  padding: 5px 10px;
  border-radius: 3px;
  cursor: pointer;
}

.sheet-name:hover {
  background-color: #f0f0f0;
}

.sheet-name.active {
  background-color: rgb(242, 241, 241);
  color: black;
}


.tag {
  background-color: grey;
  border: 1px solid black;
  border-radius: 5px;
  padding: 5px 5px 5px 5px;
  width: 50px;
  font-size: 10px;
}

.question-container {
  flex: 1;
  display: flex;
  flex-direction: column;
  padding: 15px;
  border-right: none; /* No right border for the last child */
  box-sizing: border-box;
  overflow: hidden;
}

.question-input-container {
  flex: 1;
  display: flex;
  flex-direction: column;
}

.question-input-container input {
  width: 100%;
  height: 100px;
  padding: 10px;
  border: 2px solid orange; 
  border-radius: 3px;
  box-sizing: border-box;
  font-size: 16px;
  margin-bottom: 10px;
}

.step-item{
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 190px;
 
}

.step-item:not(:first-child)::before {
  content: '';
  background-color: grey; 
  position: absolute;
  width: 100%;
  height: 2px;
  right: 50%;
  top: 33.33%; 
  transform: translateY(-50%);
}


.step {
  width: 1.5rem; /* Adjusted size */
  height: 1.5rem; /* Adjusted size */
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 10;
  position: relative;
  background-color: white;
  border: 2px solid grey;
  border-radius: 9999px;
  font-weight: 16px;
  top: 2px;
}

.chatbot-container {
  width: calc(100% - 40px);
  margin-left: 20px;
  height: calc(100% - 10px);
  background-color: white;
  border: 1px solid grey;
  border-radius: 3px;
}

.chatbot-header {
  width: 100%;
  background-color: black;
  color: white;
  padding: 10px;
}

